Provide filters for TS Type + terminal in timestamp creation
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -47,13 +47,23 @@
   <div class="p-field p-col-12 p-md-4">
     <label for="timestampType">{{ 'general.table.header.timestamp.label' | translate }}: </label>
     <p-dropdown id="timestampType" styleClass="dropdown" [(ngModel)]="timestampSelected" [options]="timestampTypes"
-      (onChange)="showLocationNameOption()"></p-dropdown>
-  
+                [filter]=true filterBy="label" appendTo="body" (onChange)="showLocationNameOption()"></p-dropdown>
+
     <div class="p-field p-col-12 p-md-2" ></div>
 
     <div [hidden]="HideTerminalOption()">
       <label for="terminalSelected">{{ 'general.terminal.label' | translate }}: </label>
-      <p-dropdown id="terminalSelected" styleClass="dropdown" [(ngModel)]="terminalSelected" [options]="terminalOptions">
+      <p-dropdown id="terminalSelected" styleClass="dropdown" [(ngModel)]="terminalSelected" [options]="terminalOptions"
+                  [filter]=true filterBy="label,value.facilityName" appendTo="body">
+        <ng-template let-terminal pTemplate="item">
+          <div *ngIf="!terminal.value">
+            <div>Select Terminal</div>
+          </div>
+          <div *ngIf="terminal.value">
+            <div>{{terminal.value.facilitySMDGCode}}</div>
+            <div class="portListName">{{terminal.value.facilityName}}</div>
+          </div>
+        </ng-template>
       </p-dropdown>
     </div>
     </div>
