solving eventDateTime type & placing eventdate correctly in secondary info box

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -36,13 +36,11 @@
       </span>
       </div>
     -->
-      <div class="p-field p-col-12 p-md-4">
-     <!--    Placeholder for additional information -->
-      </div>
+
       <div class="p-field p-col-12 p-md-4" *ngIf="respondingToTimestamp != null">
         <!-- Placeholder for additional information when rejecting timestamp -->
         <label class="label-compressed" for="eventtimestamp">{{'general.table.header.eventTimestamp.declinedLabel' | translate }}: </label>
-        <span style="font-weight: bold;" >{{ " " +(respondingToTimestamp.eventDateTime | timestampToTimezone: respondingToTimestamp.portOfCall: ports)[0]}}</span>
+        <span style="font-weight: bold;" >{{ " " +(respondingToTimestamp.eventDateTime | timestampToTimezone: respondingToTimestamp.portOfCall)[0]}}</span>
       </div>
     </div>
   </p-card>
