--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -1,11 +1,12 @@
-<h4>For Transport-Call {{ transportCall.transportCallSequenceNumber}}</h4>
+<h4>For Transport-Call {{ transportCall.transportCallSequenceNumber}}
+</h4>
 <div class="headline">
   <p-card styleClass="card-scondary">
     <div class="p-fluid p-formgrid p-grid">
       <div class="p-field p-col-12 p-md-4">
         <label class="label-compressed" for="vesselName">{{'general.transportCall.table.vesselName.label'| translate}}
           : </label>
-        <span id="vesselName"> {{transportCall.vesselName}} </span>
+        <span id="vesselName"> {{transportCall.vesselName}}</span>
       </div>
       <div class="p-field p-col-12 p-md-4">
         <label class="label-compressed" for="portOfCall">{{'general.port.ofCall'| translate}}: </label>
@@ -35,8 +36,11 @@
       </span>
       </div>
     -->
-      <div class="p-field p-col-12 p-md-4">
-     <!--    Placeholder for additional information -->
+
+      <div class="p-field p-col-12 p-md-4" *ngIf="respondingToTimestamp != null">
+        <!-- Placeholder for additional information when rejecting timestamp -->
+        <label class="label-compressed" for="eventtimestamp">{{'general.table.header.eventTimestamp.declinedLabel' | translate }}: </label>
+        <span style="font-weight: bold;" >{{ " " +(respondingToTimestamp.eventDateTime | timestampToTimezone: respondingToTimestamp.portOfCall)[0]}}</span>
       </div>
     </div>
   </p-card>
