--- a/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
+++ b/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
@@ -90,6 +90,7 @@
   </div>
 
   <div class="p-fluid p-formgrid p-grid" [hidden]="!shouldCreateTimestamp()">
+
     <div class="p-field p-col-12 p-md-4" [hidden]="!shouldCreateTimestamp()">
       <label for="timestampType">{{ 'general.table.header.timestamp.label' | translate }}: </label>
       <p-dropdown id="timestampType" formControlName="timestampType" styleClass="dropdown" [options]="timestampTypes"
@@ -100,9 +101,8 @@
         class="p-invalid">
         {{ 'general.timestamp.validation.timestampType.required' | translate }}
       </span>
-    </div>
-    <!-- TERMINAL -->
-    <div class="p-field p-col-12 p-md-4" [hidden]=" HideTerminalOption() || !shouldCreateTimestamp()">
+      <!-- TERMINAL -->
+    <div class="p-field p-col-12 p-md-4 terminalDiv" [hidden]=" HideTerminalOption() || !shouldCreateTimestamp()">
       <label for="terminal">{{ 'general.terminal.label' | translate }}:</label>
       <p-dropdown appendTo="body" formControlName="terminal" id="terminal" class="portOfCall__dropDown"
                   [options]="terminalOptions" [filter]="true" filterBy="label,value.facilityName">
@@ -125,41 +125,82 @@
         {{ 'general.transportCall.validation.terminal.empty' | translate }}
       </span>
     </div>
-
-    <div class="p-field p-col-12 p-md-4"></div>
-
-    <div class="p-field p-col-12 p-md-5" [hidden]="!shouldCreateTimestamp()">
-      <label for="eventtimestamp">{{ 'general.table.header.eventTimestamp.label' | translate }}: </label>
-      <div class="p-fluid p-formgrid p-grid">
-        <div class="p-field p-col-12 p-md-6">
-          <p-calendar id="eventtimestamp" appendTo="body" formControlName="eventTimestampDate" hourFormat="24"
-                      [monthNavigator]="true" [showButtonBar]="false"
-                      [showIcon]="true" [showWeek]="true"
-                      [yearNavigator]="true" yearRange="2010:2030"
-                      styleClass="date-time-date-field" placeholder="{{ 'general.timestamp.date.event' | translate }}"
-                      [panelStyleClass]="'datetime-panel'">
-          </p-calendar>
-          <span
-            *ngIf="transportCallFormGroup.get('eventTimestampDate').hasError('required') && transportCallFormGroup.get('eventTimestampDate').touched || transportCallFormGroup.get('eventTimestampTime').hasError('required') && transportCallFormGroup.get('eventTimestampTime').touched"
-            class="p-invalid">
-            {{ 'general.timestamp.validation.eventTimestamp.required' | translate }}
-          </span>
-        </div>
-        <div class="p-field p-col-12 p-md-6">
-          <p-inputMask formControlName="eventTimestampTime" mask="99:99"
-                       placeholder="{{ 'general.timestamp.time' | translate }}"
-                       styleClass="datetime-time-time-field"></p-inputMask>
-          <button pTooltip="{{ 'general.currentTime.tooltip' | translate }}"
-                  tooltipPosition="top"
-                  tooltipStyleClass="ToolTipClass"
-                  class="minus-rounded-borders" type="button" pButton pRipple icon="pi pi-clock"
-                  styleClass="p-button-success"
-                  (click)="setEventTimestampToNow()"></button>
-        </div>
-      </div>
     </div>
+    <div class="p-field p-col-12 p-md-2"></div>
 
-    <div class="p-field p-col-12 p-md-4"></div>
+<!-- event timestamp -->
+<div class="p-field p-col-12 p-md-5" [hidden]="!shouldCreateTimestamp()">
+  <label for="eventtimestamp">{{ 'general.table.header.eventTimestamp.label' | translate }}: </label>
+  <div class="p-fluid p-formgrid p-grid">
+    <div class="p-field p-col-12 p-md-6">
+      <p-calendar id="eventtimestamp" appendTo="body" formControlName="eventTimestampDate" hourFormat="24"
+                  [monthNavigator]="true" [showButtonBar]="false"
+                  [showIcon]="true" [showWeek]="true"
+                  [yearNavigator]="true" yearRange="2010:2030"
+                  styleClass="date-time-date-field" placeholder="{{ 'general.timestamp.date.event' | translate }}"
+                  [panelStyleClass]="'datetime-panel'">
+      </p-calendar>
+      <span
+        *ngIf="transportCallFormGroup.get('eventTimestampDate').hasError('required') && transportCallFormGroup.get('eventTimestampDate').touched || transportCallFormGroup.get('eventTimestampTime').hasError('required') && transportCallFormGroup.get('eventTimestampTime').touched"
+        class="p-invalid">
+        {{ 'general.timestamp.validation.eventTimestamp.required' | translate }}
+      </span>
+    </div>
+    <div class="p-field p-col-12 p-md-6">
+      <p-inputMask formControlName="eventTimestampTime" mask="99:99"
+                   placeholder="{{ 'general.timestamp.time' | translate }}"
+                   styleClass="datetime-time-time-field"></p-inputMask>
+      <button pTooltip="{{ 'general.currentTime.tooltip' | translate }}"
+              tooltipPosition="top"
+              tooltipStyleClass="ToolTipClass"
+              class="minus-rounded-borders" type="button" pButton pRipple icon="pi pi-clock"
+              styleClass="p-button-success"
+              (click)="setEventTimestampToNow()"></button>
+    </div>
+  </div>
+</div>
+
+    <!-- Delay Code -->
+    <div class="p-field p-col-12 p-md-4" [hidden]="!shouldCreateTimestamp()">
+      <label for="delayCode">{{"general.delaycode.label" | translate}}</label>
+      <p-dropdown id="delayCode" [options]="delayCodeOptions" formControlName="delayCode" [filter]="true"
+                  filterBy="label,value.name" [group]="false">
+        <ng-template let-delayCode pTemplate="selectedItem">
+          <div *ngIf="delayCode.value" class="delayCodeSelectedWrapper">
+            <div class="delayCodeSelected__smdgCode">{{delayCode.value.smdgCode}}</div>
+            <div class="delayCodeSelected__delayType">&nbsp;&middot;&nbsp;{{delayCode.value.delayType}}
+            </div>
+            <div class="delayCodeSelected__delayDetails">&nbsp;&middot;&nbsp;{{delayCode.value.name}}</div>
+            <div class="delayCodeSelected__delayDetails">&nbsp;&middot;&nbsp;{{delayCode.value.description}}</div>
+          </div>
+          <div *ngIf="!delayCode.value">
+            <div>{{delayCode.label}}</div>
+          </div>
+        </ng-template>
+        <ng-template let-delayCode pTemplate="item">
+          <div class="delayCodeDetails" *ngIf="delayCode.value">
+            <div class="delayCodeDetails__smdgCode">{{delayCode.value.smdgCode}}</div>
+            <div class="delayCodeDetails__delayType">{{delayCode.value.delayType}}</div>
+            <div class="delayCodeDetails__delayName">{{delayCode.value.name}}</div>
+            <div class="delayCodeDetails__delaydescription">{{delayCode.value.description}}</div>
+          </div>
+        </ng-template>
+      </p-dropdown>
+    </div>
+    
+
+    
+    
+
+    <div class="p-field p-col-12 p-md-2"></div>
+    <!-- Delay Remark -->
+    <div class="p-field p-col-12 p-md-5" [hidden]="!shouldCreateTimestamp()">
+      <span class="p-float-label">
+        <textarea class="commentBox" id="commentbox" pInputTextarea formControlName="defaultTimestampRemark"
+                  [readOnly]="!shouldCreateTimestamp()"></textarea>
+        <label for="commentbox">{{ 'general.comment.tooltip' | translate }}</label>
+      </span>
+    </div>
 
     <!-- Vessel Position -->
     <div class="p-field p-col-12 p-md-4" [hidden]="hideVesselPosition() || !shouldCreateTimestamp() " >
@@ -196,44 +237,11 @@
       <!-- Probably is a better way to next field on separate row -->
     </div>
 
-    <!-- Delay Code -->
-    <div class="p-field p-col-12 p-md-5" [hidden]="!shouldCreateTimestamp()">
-      <label for="delayCode">{{"general.delaycode.label" | translate}}</label>
-      <p-dropdown id="delayCode" [options]="delayCodeOptions" formControlName="delayCode" [filter]="true"
-                  filterBy="label,value.name" [group]="false">
-        <ng-template let-delayCode pTemplate="selectedItem">
-          <div *ngIf="delayCode.value" class="delayCodeSelectedWrapper">
-            <div class="delayCodeSelected__smdgCode">{{delayCode.value.smdgCode}}</div>
-            <div class="delayCodeSelected__delayType">&nbsp;&middot;&nbsp;{{delayCode.value.delayType}}
-            </div>
-            <div class="delayCodeSelected__delayDetails">&nbsp;&middot;&nbsp;{{delayCode.value.name}}</div>
-            <div class="delayCodeSelected__delayDetails">&nbsp;&middot;&nbsp;{{delayCode.value.description}}</div>
-          </div>
-          <div *ngIf="!delayCode.value">
-            <div>{{delayCode.label}}</div>
-          </div>
-        </ng-template>
-        <ng-template let-delayCode pTemplate="item">
-          <div class="delayCodeDetails" *ngIf="delayCode.value">
-            <div class="delayCodeDetails__smdgCode">{{delayCode.value.smdgCode}}</div>
-            <div class="delayCodeDetails__delayType">{{delayCode.value.delayType}}</div>
-            <div class="delayCodeDetails__delayName">{{delayCode.value.name}}</div>
-            <div class="delayCodeDetails__delaydescription">{{delayCode.value.description}}</div>
-          </div>
-        </ng-template>
-      </p-dropdown>
-    </div>
+    
     <div class="p-field p-col-12 p-md-7">
     </div>
 
-    <!-- Delay Remark -->
-    <div class="p-field p-col-12 p-md-6" [hidden]="!shouldCreateTimestamp()">
-      <span class="p-float-label">
-        <textarea class="commentBox" id="commentbox" pInputTextarea formControlName="defaultTimestampRemark"
-                  [readOnly]="!shouldCreateTimestamp()"></textarea>
-        <label for="commentbox">{{ 'general.comment.tooltip' | translate }}</label>
-      </span>
-    </div>
+    
     <div class="p-field p-col-12 p-md-6">
     </div>
   </div>
