--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -55,7 +55,7 @@
 
     <div class="p-field p-col-12 p-md-2" ></div>
 
-    <div [hidden]="HideTerminalOption()">
+    <div [hidden]="!showTerminalOption()">
       <label for="terminalSelected">{{ 'general.terminal.label' | translate }}: </label>
       <p-dropdown id="terminalSelected" styleClass="dropdown" [(ngModel)]="terminalSelected" [options]="terminalOptions"
                   [filter]=true filterBy="label,value.facilityName" appendTo="body">
@@ -174,11 +174,11 @@
   </div>
 
   <!-- Vessel Position -->
-  <div class="p-field p-col-12 p-md-4" [hidden]="hideVesselPosition()">
+  <div class="p-field p-col-12 p-md-4" [hidden]="!showVesselPosition()">
     <label for="vesselPositionLatitude">{{ "general.timestamp.vesselPosition.latitude.label" | translate }}:</label>
     <input id="vesselPositionLatitude" [(ngModel)]="vesselPosition.latitude" pInputText style="width: 100%" type="text"/>
   </div>
-  <div class="p-field p-col-12 p-md-4" [hidden]="hideVesselPosition()">
+  <div class="p-field p-col-12 p-md-4" [hidden]="!showVesselPosition()">
     <label for="vesselPositionLongitude">{{ "general.timestamp.vesselPosition.longitude.label" | translate }}:</label>
     <input id="vesselPositionLongitude" [(ngModel)]="vesselPosition.longitude" pInputText style="width: 100%" type="text"/>
   </div>
