Support having multiple publisher roles at the same time
Since the timestamp definition tells us which publisher role a
timestamp should have, then we can easily have multiple publisher
roles at the same time.

This also enables us to activate *all* publisher allowing users to
play with all "hats" at the same time (and therefore answer their own
timestamps), which is help for development or educational purposes.

Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/ui/src/app/view/header/header.component.html
+++ b/ui/src/app/view/header/header.component.html
@@ -17,7 +17,7 @@
   <div class="p-col-1"></div>
   <div class="p-col-4 header__menuLabel header__company_container">
     <span class="header__company">{{ 'general.company' | translate }}: {{ companyName }}</span>
-    <span class="header__info_small">{{companyCodeType}}: {{companyId}}</span>
+    <span class="header__info_small">{{companyId}}, roles: {{companyCodeType}}</span>
   </div>
   <div class="p-col-1 header__language">
     <p-dropdown styleClass="dropdown" (onChange)="changeLanguage($event)" [(ngModel)]="currentLanguage" [filter]="true"
