Update instructions (from Guido)
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/ui/src/app/view/instructions/instructions.component.html
+++ b/ui/src/app/view/instructions/instructions.component.html
@@ -8,10 +8,7 @@
     <p>
       {{ 'general.instructions.explanation.paragraph.1' | translate }}
     </p>
-    <p>
-      {{ 'general.instructions.explanation.paragraph.2' | translate }} <a href="mailto:guido.debeer@dcsa.org">guido.debeer@dcsa.org</a>
-
-    </p>
+    <p>{{ 'general.instructions.explanation.paragraph.2' | translate }}</p>
     <p>
       {{ 'general.instructions.explanation.paragraph.3' | translate }}
     </p>
@@ -43,6 +40,10 @@
     <div class="p-grid">
       <div class="p-col-fixed" style="width:140px"><b>ATA PBP</b></div>
       <div class="p-col">{{ 'general.instructions.explanation.pbp.ata' | translate }}</div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>ATA PILOTAGE</b></div>
+      <div class="p-col">{{ 'general.instructions.explanation.pilotage.ata' | translate }}</div>
     </div>
     <div class="p-grid">
       <div class="p-col-fixed" style="width:140px"><b>ATA BERTH</b></div>
