displaying transportcalls with ATD Berth as obsolete and greyed out
displaying transportcalls with ATD Berth as obsolete and greyed out

--- a/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -53,7 +53,7 @@
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-transportCall>
-    <tr [pSelectableRow]="transportCall">
+    <tr [pSelectableRow]="transportCall" [ngClass]="{'obsoleteTransportCall': transportCall.actualPortDeparture != undefined}">
       <td>{{transportCall.vesselName}}</td>
       <td>{{transportCall.vesselIMONumber}}</td>
       <td>{{transportCall.UNLocationCode}}</td>
